--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,20 @@
 			<artifactId>spring-hibernate</artifactId>
 			<version>1.2.9</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
 
+			<groupId>javax.validation</groupId>
+
+			<artifactId>validation-api</artifactId>
+
+		</dependency>
 
 		<dependency>
 
@@ -59,6 +67,7 @@
 			<version>6.1.5.Final</version>
 
 		</dependency>
+		
 		<dependency>
 
 			<groupId>mysql</groupId>
@@ -76,6 +85,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
+	<dependency> <groupId>javax.xml.bind</groupId> 
+	<artifactId>jaxb-api</artifactId> 
+	<version>[2.3.0,]</version>
+	 </dependency >
 
 
 	</dependencies>
